--- a/mywebapp/Pages/Index.cshtml
+++ b/mywebapp/Pages/Index.cshtml
@@ -1,3 +1,9 @@
 @page
+@using Microsoft.Extensions.Configuration
+@inject IConfiguration Configuration
 
 <h1>Hello from Razor page</h1>
+
+<h2>
+    @Configuration["Message"]
+</h2>
